# cxyier

./: .gitignore  AGENTS.md  CMakeLists.txt  PROMPT.md  README.md  debug_func
docs/: SEXPR.md
include/cxy/: arena_allocator.hpp  arena_ptr.hpp  arena_stl.hpp  compiler.hpp  diagnostics.hpp  flags.hpp  frontend.hpp  lexer.hpp  memory.hpp  parser.hpp  stack_arena.hpp  stages.hpp  strings.hpp  symbols.hpp  token.hpp  types.hpp
include/cxy/ast/: annotations.hpp  attributes.hpp  declarations.hpp  expressions.hpp  identifiers.hpp  kind.hpp  literals.hpp  node.hpp  printer.hpp  statements.hpp  types.hpp  visitor.hpp
include/cxy/compiler/: compilation_result.hpp  compiler.hpp  diagnostic_extensions.hpp  module_cache.hpp  option_parser.hpp  options.hpp  options_types.hpp
include/cxy/frontend/: lexer.hpp  parser.hpp
include/cxy/memory/: arena.hpp  arena_ptr.hpp  arena_stl.hpp
include/cxy/stages/: symbols.hpp
include/cxy/types/: composite.hpp  kind.hpp  primitive.hpp  registry.hpp
src/: CMakeLists.txt  main.cpp  symbols.cpp
src/compiler/: compiler.cpp  module_cache.cpp  option_parser.cpp  option_utils.cpp  options.cpp
src/diagnostics/: diagnostics.cpp
src/frontend/: flags.cpp  lexer.cpp  parser.cpp  token.cpp
src/frontend/ast/: printer.cpp  visitor.cpp
src/memory/: arena_allocator.cpp  stack_arena.cpp
src/stages/: symbols.cpp
src/strings/: strings.cpp
src/types/: composite.cpp  primitive.cpp  type.cpp  utilities.cpp
test_files/: main.cxy  utils.cxy
tests/: CMakeLists.txt  ast_printer_statements_test.cpp  ast_test_utils.hpp  lexer_test_helper.hpp  parser_test_utils.hpp  test_arena_allocator.cpp  test_ast_printer.cpp  test_ast_printer_simple.cpp  test_ast_visitor.cpp  test_compiler_options.cpp  test_diagnostics.cpp  test_includes.cpp  test_lexer.cpp  test_string_interpolation.cpp  test_strings.cpp  test_token.cpp
tests/compiler/: test_compiler.cpp  test_module_cache.cpp
tests/declarations/: test_variable_declarations.cpp
tests/parser/: debug_test.cpp  test_attributes.cpp  test_expression_integration.cpp  test_identifiers.cpp  test_primary_expressions.cpp  test_token_buffer.cpp  test_type_integration.cpp
tests/parser/declarations/: test_enum_declarations.cpp  test_function_declarations.cpp  test_import_declarations.cpp  test_module_declarations.cpp  test_struct_class_declarations.cpp  test_type_declarations.cpp  test_variable_declarations.cpp
tests/parser/expressions/: test_arithmetic_expressions.cpp  test_array_literals.cpp  test_assignment_expressions.cpp  test_bitwise_expressions.cpp  test_cast_expressions.cpp  test_conditional_expressions.cpp  test_equality_expressions.cpp  test_function_calls.cpp  test_indexing.cpp  test_logical_expressions.cpp  test_macro_calls.cpp  test_member_access.cpp  test_range_expressions.cpp  test_relational_expressions.cpp  test_shift_expressions.cpp  test_spread_expressions.cpp  test_string_interpolation.cpp  test_struct_literals.cpp  test_tuple_literals.cpp
tests/parser/literals/: test_boolean_null_literals.cpp  test_character_literals.cpp  test_float_literals.cpp  test_integer_literals.cpp  test_string_literals.cpp
tests/parser/statements/: test_block_statements.cpp  test_break_continue_statements.cpp  test_defer_return_yield_statements.cpp  test_expression_statements.cpp  test_for_statements.cpp  test_if_statements.cpp  test_match_statements.cpp  test_switch_statements.cpp  test_variable_declarations.cpp  test_while_statements.cpp
tests/parser/types/: test_complex_types.cpp  test_qualified_paths.cpp
tests/symbols/: test_symbol_table.cpp
tests/types/: test_array_types.cpp  test_class_types.cpp  test_composite_types.cpp  test_pointer_reference_types.cpp  test_primitive_types.cpp  test_struct_types.cpp  test_type_infrastructure.cpp
